[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Julius Sommerlade <julius.sommerlade@caterwings.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
sqlalchemy = "^1.3.20"
drizm-commons = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
